--- a/static/html/adminLogin.html
+++ b/static/html/adminLogin.html
@@ -31,6 +31,9 @@
                 <button type="button" class="btn btn-primary form-control" onclick="login()">登录</button>
             </div>
             <div class="form-group">
+                <a href="index.html"><button type="button" class="btn btn-default form-control">先不登录</button></a>
+            </div>
+            <div class="form-group">
                 <button type="button" class="btn btn-default form-control">注册</button>
             </div>
         </div>
@@ -57,6 +60,9 @@
                     }
                     if (data.Code === 200) {
                         let result = data.Data
+                        // 先清空之前的cookie
+                        $.removeCookie('token')
+                        $.removeCookie('user_type_id')
                         $.cookie('token', result.TokenValue, {expires:7})
                         $.cookie('user_type_id', result.UserTypeId, {expires:7})
                         window.location.href = "admin.html"
