--- a/static/html/adminLogin.html
+++ b/static/html/adminLogin.html
@@ -34,7 +34,7 @@
                 <a href="index.html"><button type="button" class="btn btn-default form-control">先不登录</button></a>
             </div>
             <div class="form-group">
-                <button type="button" class="btn btn-default form-control">注册</button>
+                <a href="submit.html"><button type="button" class="btn btn-default form-control">注册</button></a>
             </div>
         </div>
     </div><!-- /.modal-content -->
