--- a/static/html/article.html
+++ b/static/html/article.html
@@ -26,7 +26,7 @@
 <script src="//cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <body>
 <!-- 导航 -->
-<div id="app" class="row">
+<div id="app" v-clock class="row">
     <!-- 导航 -->
     <nav class="navbar navbar-default" style="width:100%;padding-left: 4%;">
         <div class="container-fluid">
