--- a/static/html/article.html
+++ b/static/html/article.html
@@ -5,7 +5,7 @@
     <title>文章</title>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/article.css" rel="stylesheet">
+    <link href="../css/article.css" rel="stylesheet">
 </head>
 <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
@@ -26,7 +26,7 @@
 <script src="//cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <body>
 <!-- 导航 -->
-<div id="app" v-clock class="row">
+<div id="app" v-cloak class="row">
     <!-- 导航 -->
     <nav class="navbar navbar-default" style="width:100%;padding-left: 4%;">
         <div class="container-fluid">
