--- a/static/html/index.html
+++ b/static/html/index.html
@@ -20,7 +20,7 @@
 <!-- common.js -->
 <script src="../js/common.js"></script>
 <body>
-<div id="app">
+<div id="app"  v-cloak>
     <!-- 导航 -->
     <nav class="navbar navbar-default" style="width:100%;padding-left: 4%;">
         <div class="container-fluid">
