发布文章 封面图上传bug解决

--- a/static/html/mdArticle.html
+++ b/static/html/mdArticle.html
@@ -103,7 +103,7 @@
             path: "../lib/",
             imageUpload: true,
             imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
-            imageUploadURL: "http://localhost:8080/upload",
+            imageUploadURL: host + "upload",
             crossDomainUpload: false,          // Enable/disable Cross-domain upload
         });
     });
